--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,20 @@
 [project]
 name = "ai-frc"
 version = "0.1.0"
-description = "Add your description here"
+description = "Financial Reporting Compliance OCR Pipeline"
 readme = "README.md"
 requires-python = ">=3.11"
+
 dependencies = [
-    "docling>=2.71.0",
-    "fastapi>=0.128.0",
-    "onnxruntime-silicon>=1.16.3",
-    "paddleocr>=3.4.0",
-    "paddlepaddle>=3.3.0",
-    "pymupdf>=1.26.7",
-    "rapidfuzz>=3.14.3",
-    "torch>=2.10.0",
-    "uvicorn>=0.40.0",
+  "fastapi>=0.128.0",
+  "paddleocr>=3.4.0",
+  "paddlepaddle>=3.3.0",
+  "pymupdf>=1.26.7",
+  "rapidfuzz>=3.14.3",
+  "torch>=2.1.0",
+  "uvicorn>=0.40.0",
+
+  # ✅ Correct platform-specific ONNX runtime
+  "onnxruntime>=1.16.0; sys_platform == 'win32'",
+  "onnxruntime-silicon>=1.16.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
 ]
