--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,8 @@ dependencies = [
   "rapidfuzz>=3.14.3",
   "torch>=2.1.0",
   "uvicorn>=0.40.0",
-
   # ✅ Correct platform-specific ONNX runtime
   "onnxruntime>=1.16.0; sys_platform == 'win32'",
   "onnxruntime-silicon>=1.16.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
+  "pyarrow>=23.0.0",
 ]
